fix text wrapping in modal

--- a/src/app/components/NotesContent/styles.module.css
+++ b/src/app/components/NotesContent/styles.module.css
@@ -18,9 +18,12 @@
 
 .modalNote {
     height: 500px;
+    &:hover {
+        cursor: default;
+    }
 }
 
-.noteTitle, .noteDescription {
+.noteTitle, .noteDescription, .noteDescriptionModal {
     padding: 10px;
     width: 100%;
 }
@@ -37,17 +40,29 @@
     }
 }
 
-.noteDescription {
+.noteDescription, .noteDescriptionModal {
     font-size: 1rem;
     word-wrap: break-word;
     overflow-wrap: break-word;
-     p {
-        line-clamp: 11;
+    p {
         display: -webkit-box;
-        -webkit-line-clamp: 11;
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;    
+    }
+}
+
+.noteDescription {
+    p {
+        line-clamp: 11;
+        -webkit-line-clamp: 11;
+    }
+}
+
+.noteDescriptionModal {
+    p {
+        line-clamp: 27;
+        -webkit-line-clamp: 27;
     }
 }
 
